--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <h2>Featured Drops</h2>
     <div class="products">
       <div class="product">
-        <img src="https://chat.openai.com/mnt/data/b44edab5-18bc-4e9a-8f38-a713d61abbbe.png" alt="Hoodie">
+        <img src="Image%20Folder/CustomHoodie.png" alt="Custom Hoodie">
         <h3>Classic Hoodie – $35</h3>
       </div>
       <div class="product">
