--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
     <h2>Featured Drops</h2>
     <div class="products">
       <div class="product">
-        <img src="Image%20Folder/CustomHoodie.png" alt="Custom Hoodie">
+        <img src="Images%20Folder/CustomHoodie.png" alt="Custom Hoodie">
         <h3>Classic Hoodie – $35</h3>
       </div>
       <div class="product">
-        <img src="https://images.unsplash.com/photo-1602810314367-5eb058d51f8f" alt="Tee">
+        <img src="hImages%20Folder/CustomHoodie.png" alt="Tee">
         <h3>Signature Tee – $20</h3>
       </div>
       <div class="product">
-        <img src="https://images.unsplash.com/photo-1593032290585-84fba1ecf401" alt="Cap">
+        <img src="Images%20Folder/CustomHoodie.png" alt="Cap">
         <h3>Logo Cap – $15</h3>
       </div>
     </div>
